# Calculissimo

./: .gitignore  CMakeLists.txt
include/core/: Application.hpp
include/game/: Difficulty.hpp  GenerationSettings.hpp  Mascot.hpp  Operation.hpp  Question.hpp  QuestionGenerator.hpp
include/storage/: FileManager.hpp
include/user/: UserProfile.hpp
src/: main.cpp
src/core/: Application.cpp
src/game/: Difficulty.cpp  Mascot.cpp  Question.cpp  QuestionGenerator.cpp
src/storage/: FileManager.cpp
src/user/: UserProfile.cpp
